<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.arthurgrangeiro.cheese.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_question"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/dark_gray"
            android:padding="@dimen/activity_vertical_margin"
            android:textStyle="bold"
            android:background="@color/white"
            android:text="@string/game_name"/>

        <TextView
            android:id="@+id/question1"
            style="@style/QuestionOptionText"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/radio1"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/q1_answer"
                style="@style/OptionText"
                android:text="@string/q1_answer" />

            <RadioButton
                android:id="@+id/q1_optino1"
                style="@style/OptionText"
                android:text="@string/q1_option1" />

            <RadioButton
                android:id="@+id/q1_option2"
                style="@style/OptionText"
                android:text="@string/q1_option2" />

            <RadioButton
                android:id="@+id/q1_option3"
                style="@style/OptionText"
                android:text="@string/q1_option3" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2"
            style="@style/QuestionOptionText"
            android:text="@string/question2" />

        <RadioGroup
            android:id="@+id/radio2"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/q2_option1"
                style="@style/OptionText"
                android:text="@string/q2_option1" />

            <RadioButton
                android:id="@+id/q2_option2"
                style="@style/OptionText"
                android:text="@string/q2_option2" />

            <RadioButton
                android:id="@+id/q2_option3"
                style="@style/OptionText"
                android:text="@string/q2_option3" />

            <RadioButton
                android:id="@+id/q2_answer"
                style="@style/OptionText"
                android:text="@string/q2_answer" />
        </RadioGroup>

        <TextView
            android:id="@+id/question3"
            style="@style/QuestionOptionText"
            android:text="@string/question3" />

        <RadioGroup
            android:id="@+id/radio3"
            style="@style/RadioGroupStyle">

            <RadioButton
                android:id="@+id/q3_option1"
                style="@style/OptionText"
                android:text="@string/q1_answer" />

            <RadioButton
                android:id="@+id/q3_answer"
                style="@style/OptionText"
                android:text="@string/q3_answer" />

            <RadioButton
                android:id="@+id/q3_option2"
                style="@style/OptionText"
                android:text="@string/q1_option2" />

            <RadioButton
                android:id="@+id/q3_option3"
                style="@style/OptionText"
                android:text="@string/q1_option3" />
        </RadioGroup>

        <LinearLayout
            style="@style/LinearStyle"
            android:id="@+id/question4">

            <TextView
                style="@style/QuestionText"
                android:id="@+id/text_question4"
                android:text="@string/question4" />

            <CheckBox
                style="@style/OptionText"
                android:id="@+id/q4_option1"
                android:text="@string/q4_option1" />

            <CheckBox
                style="@style/OptionText"
                android:id="@+id/q4_answer1"
                android:text="@string/q4_answer1" />

            <CheckBox
                style="@style/OptionText"
                android:id="@+id/q4_answer2"
                android:text="@string/q4_answer2" />

            <CheckBox
                style="@style/OptionText"
                android:id="@+id/q4_option2"
                android:text="@string/q4_option2" />
        </LinearLayout>

        <LinearLayout
            style="@style/LinearStyle">

            <TextView
                style="@style/QuestionText"
                android:id="@+id/question5"
                android:text="@string/question5" />

            <EditText
                android:id="@+id/q5_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:inputType="textCapWords" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/submit"
            android:onClick="checkForRightAnwser"/>
    </LinearLayout>
</ScrollView>